# ipb-dataverse-frontend

./: docker-compose.dev.yml
src/ckanext-ipb_dataverse_theme/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
src/ckanext-ipb_dataverse_theme/.github/workflows/: test.yml
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/: cli.py  helpers.py  plugin.py  views.py
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/assets/: script.js  webassets.yml
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/logic/: action.py  auth.py  schema.py  validators.py
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/public/: ipb_dataverse.css  ipb_dataverse_search.css
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/public/dashboard/: dashboard_custom.css
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/public/dataset/: dataset.css  globals.css  style.css  styleguide.css
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/public/header/: header.js
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/templates/: base.html  footer.html  header.html
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/templates/home/: help.html  index.html
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/templates/package/: search.html
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/templates/user/: dashboard_datasets.html  dashboard_groups.html  login.html  (+1 more)
src/ckanext-ipb_dataverse_theme/ckanext/ipb_dataverse_theme/tests/: test_helpers.py  test_plugin.py  test_views.py
(+3 files in other folders)
