[project]
name = "ckanext-ipb_dataverse_theme"
version = "0.0.1"
description = "IPB Dataverse CKAN Theme"
readme = "README.md"
authors = [
    {name = "Hafidz", email = "hafidzrizki443@gmail.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "theme", "IPB", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/hafidz34/ckanext-ipb_dataverse_theme"

[project.entry-points."ckan.plugins"]
ipb_dataverse_theme = "ckanext.ipb_dataverse_theme.plugin:IpbDataverseThemePlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
